    emptiness of an SCC.  This is now used by
    twa_graph_ptr::is_empty(), twa_graph_ptr::intersects(), and
    scc_info::determine_unknown_acceptance().

  - The new function spot::to_parity() translates an automaton
    with arbitrary acceptance condition into a parity automaton,
    based on a last-appearance record (LAR) construction.

New in spot 2.6.1  (2018-08-04)

  Command-line tools:

  - "ltlfilt --suspendable" is now a synonym for
    "ltlfilt --universal --eventual".

  Bugs fixed:

  - scc_info::split_on_sets() did not correctly register the
    atomic propositions of the returned automata.

  - The spot::tl_simplifier class could raise an exception while
    attempting to reduce formulas containing unsimplified <->, -> or
    xor, if options nenoform_stop_on_boolean and synt_impl are both
    set.  (This combination of options is not available from
    command-line tools.)

  - The spot::contains(a, b) function introduced in 2.6 was testing
    a⊆b instead of a⊇b as one would expect.  Infortunately the
    documentation was also matching the code, so this is a backward
    incompatible change, but a short-lived one.

  - The Python binding of the getter of spot::parsed_formula::f was
    returning a reference instead of a copy, causing issues if the
    reference outlasted the parsed_formula struct.


New in spot 2.6  (2018-07-04)

  Command-line tools:

  - autfilt learned --is-colored to filter automata that use
    exactly one acceptance set per mark or transition.

  - autfilt learned --has-univ-branching and --has-exist-branching
    to keep automata that have universal branching, or that make
    non-deterministic choices.

  - autcross' tool specifications now have %M replaced by the name of
    the input automaton.

  - autcross now aborts if there is any parser diagnostic for the
    input automata (previous versions would use the input automaton
    whenever the parser would manage to read something).
